# Anomaly-detection

./:  AnomalyDetector.cpp   AnomalyDetector.h  AnomalyDetector.cpp  AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  data.csv  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
backup/: timeseries.cpp
